Improved Twee introduction formatting - wrapped examples of play in details elements - audited formatting - added text block to wounds section - fixed links - adjusted style of details elements

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,7 +39,7 @@ main {
   margin: auto;
 }
 
-ul, ol , ol details {
+ul, ol {
   padding-left: 2ch;
 }
 
@@ -63,6 +63,11 @@ nav {
 
 label {
   display: grid;
+}
+
+details {
+  border: solid;
+  padding: 0.5ch 1ch;
 }
 
 blockquote, sub {
